@@ -177,17 +177,16 @@ public abstract class ClientRequest {
      * string value.
      * <p>
      * This method defers to {@link RuntimeDelegate#createHeaderDelegate} to
-     * obtain a {@link HeaderDelegate} to convert the value to a string.
-     * <p>
-     * Containers may use this method to convert the header values obtained
-     * from the {@link #getMetadata()}.
+     * obtain a {@link HeaderDelegate} to convert the value to a string. If
+     * a {@link HeaderDelegate} is not found then the <code>toString</code>
+     * is utilized.
      * 
      * @param headerValue the header value as an object
      * @return the string value
      */
-    @SuppressWarnings("unchecked")
     public static String getHeaderValue(Object headerValue) {
         HeaderDelegate hp = rd.createHeaderDelegate(headerValue.getClass());
-        return hp.toString(headerValue);
+
+        return (hp != null) ? hp.toString(headerValue) : headerValue.toString();
     }
 }
